shenyu-java-examples/shenyu-java-examples-motan/shenyu-java-examples-motan-service/k8s/ingress.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: motan-demo-hello
  namespace: shenyu-ingress
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-motan-enabled: 'true'
    shenyu.apache.org/plugin-motan-app-name: motan
    shenyu.apache.org/plugin-motan-path: /demo/hello
    shenyu.apache.org/plugin-motan-rpc-type: motan
    shenyu.apache.org/plugin-motan-service-name: org.apache.shenyu.examples.motan.service.MotanDemoService
    shenyu.apache.org/plugin-motan-method-name: hello
    shenyu.apache.org/plugin-motan-params-type: java.lang.String
    shenyu.apache.org/plugin-motan-rpc-expand: |
      {"methodInfo":[{"methodName":"hello","params":[{"left":"java.lang.String","right":"name"}]}],"group":"motan-shenyu-rpc","timeout":2000,"rpcProtocol":"motan2"}
    shenyu.apache.org/zookeeper-register-address: shenyu-zk:2181
spec:
  selector:
    app: shenyu-java-examples-motan-service
  ports:
    - port: 8081  # Assuming this is the motan service port

---

apiVersion: v1
kind: Service
metadata:
  name: motan-demo-test-hello
  namespace: shenyu-ingress
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-motan-enabled: 'true'
    shenyu.apache.org/plugin-motan-app-name: motan
    shenyu.apache.org/plugin-motan-path: /demoTest/hello
    shenyu.apache.org/plugin-motan-rpc-type: motan
    shenyu.apache.org/plugin-motan-service-name: org.apache.shenyu.examples.motan.service.MotanDemoService
    shenyu.apache.org/plugin-motan-method-name: hello
    shenyu.apache.org/plugin-motan-params-type: java.lang.String
    shenyu.apache.org/zookeeper-register-address: shenyu-zk:2181
    shenyu.apache.org/plugin-motan-rpc-expand: |
      {"methodInfo":[{"methodName":"hello","params":[{"left":"java.lang.String","right":"name"}]}],"group":"motan-shenyu-rpc","timeout":2000,"rpcProtocol":"motan2"}
spec:
  selector:
    app: shenyu-java-examples-motan-service
  ports:
    - port: 8081  # Assuming this is the motan service port

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: shenyu-ingress
  labels:
    shenyu.apache.org/metadata-labels-1: motan-demo-hello
    shenyu.apache.org/metadata-labels-2: motan-demo-test-hello
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-motan-enabled: 'true'
    shenyu.apache.org/zookeeper-register-address: shenyu-zk:2181
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: shenyu-java-examples-motan-service
                port:
                  number: 8081
            path: /**
            pathType: ImplementationSpecific
